# mnesis-canonical

./: .clinerules  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRACTS.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: agent-review.yml  agent-worker.yml  ci.yml
contracts/: README.md  XR_ROBOT_CONTRACT.md  canonical_frame_schema_REFERENCE.md  xr_bridge_SPEC.md
docs/: HANDOFF.md  RELEASE_CHECKLIST_v1.0.md  SPRINT_S1.md
embodiments/: airbot_play.json  dual_airbot_play.json  ego_human.json  embodiment.schema.json
examples/episode_0/: data.jsonl  manifest.json
examples/episode_dual_airbot/: data.jsonl  events.jsonl  manifest.json
examples/episode_gripper/: data.jsonl  manifest.json
examples/episode_hands/: data.jsonl  manifest.json
examples/episode_hands/annotations/: spans.jsonl
examples/episode_quest/: data.jsonl  manifest.json
examples/episode_robot/: data.jsonl  manifest.json
mnesis_canonical/: __init__.py  __main__.py  canonical_frame.schema.json  contracts_check.py  embodiment_check.py  embodiment_registry.py  io.py  isaac.py  lerobot.py  manifest.py  manifest.schema.json  schema.py  synth.py  validate.py  viz.py
mnesis_canonical/embodiments/: airbot_play.json  alohamini.json  embodiment.schema.json  so_arm101.json
mnesis_canonical/importers/: __init__.py  __main__.py  _common.py  _mcap.py  airbot_mcap.py  xrobotoolkit.py
mnesis_canonical/sdk/: __init__.py  _adapter.py
taxonomies/: manipulation_v1.json
tests/: conftest.py  test_capture.py  test_cli.py  test_contracts.py  test_embodiment.py  test_examples.py  test_extras.py  test_gripper.py  test_gripper_observation.py  test_importers.py  test_isaac.py  test_lerobot.py  test_manifest.py  test_profile.py  test_sdk.py  test_synth.py  test_validate.py  test_viz.py  test_wheel_install.py
tests/fixtures/: _generate.py
tests/fixtures/airbot/: airdc_synth.mcap
tests/fixtures/xrobotoolkit/: teleop_log_synth.pkl
