[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mnesis-canonical"
version = "0.2.0"
description = "Mnesis Canonical Schema — open standard for embodied spatial-action data (the 'USB-C' for robot-trainable data)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mnesis Labs" }]
dependencies = []

[project.optional-dependencies]
jsonschema = ["jsonschema>=4.18"]
dev = ["pytest>=8.0", "ruff>=0.6", "jsonschema>=4.18", "pyright>=1.1"]

[project.scripts]
mnesis-canonical = "mnesis_canonical.__main__:main"
mnesis-canonical-contracts-check = "mnesis_canonical.contracts_check:main"

[tool.setuptools.packages.find]
include = ["mnesis_canonical*"]

[tool.setuptools.package-data]
mnesis_canonical = ["canonical_frame.schema.json", "manifest.schema.json", "py.typed", "embodiments/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
